[package]
name = "into_other"
version = "0.0.1"
edition = "2018"
publish = false

[features]
protobuf-codec = ["kvproto/protobuf-codec", "raft/protobuf-codec"]
prost-codec = ["kvproto/prost-codec", "raft/prost-codec"]

[dependencies]
engine_traits = { path = "../engine_traits" }
kvproto = { git = "https://github.com/3pointer/kvproto.git", default-features = false, branch="add_writerequest" }
raft = { version = "0.6.0-alpha", default-features = false }
